--- a/src/components/Loguear.astro
+++ b/src/components/Loguear.astro
@@ -5,7 +5,7 @@ import ButtonMain from "./misc/ButtonMain.astro";
 <div class="bg-slate-100 dark:bg-muted-1000 w-full  py-8 pt-16">
     <a href="/">
 		<img class="w-24 h-20 flex fixed top-0 left-0"
-			src="../public/logo-elysium-subido.png"
+			src="/public/logo-elysium-subido.png"
 			alt="Logo"
 			/>
 	</a>
