--- a/src/js/ScrollAnimation.astro
+++ b/src/js/ScrollAnimation.astro
@@ -2,12 +2,12 @@
 ---
 <script>
   // JS: Usa Intersection Observer API
-  // import AOS from 'aos/dist/aos.css';
-  // AOS.init({
-  //     offset: 200,
-  //     duration: 600,
-  //     easing: 'ease-in-sine',
-  //     delay: 100,
-  //   });
+  import AOS from 'aos';
+  AOS.init({
+      offset: 200,
+      duration: 600,
+      easing: 'ease-in-sine',
+      delay: 100,
+    });
 
 </script>
